# startmc

./: Cargo.toml  LICENSE  README.md
crates/downloader/: Cargo.toml  README.md
crates/downloader/src/: download.rs  downloader.rs  lib.rs
crates/downloader/src/downloader/: builder.rs  style.rs
crates/mojapi/: Cargo.toml  README.md
crates/mojapi/src/: model.rs
crates/mojapi/src/model/: argument.rs  assets.rs  fabric.rs  file.rs  rule.rs  version.rs
crates/mojapi/src/util/: maven.rs
src/: cache.rs  cli.rs  config.rs  exec.rs  lib.rs  main.rs  sync.rs  util.rs
src/exec/: init.rs  remove.rs  run.rs  sync.rs  upgrade.rs
src/sync/: filter.rs  version.rs
src/util/: dialoguer.rs  format.rs  spin.rs
