[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# crates/
startmc_mojapi = { path = "crates/mojapi" }

[package]
name = "startmc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.52"
nu-ansi-term = "0.50.1"
tokio.workspace = true
reqwest.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
startmc_mojapi.workspace = true
