[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# crates/
startmc_downloader = { path = "crates/downloader" }
startmc_mojapi = { path = "crates/mojapi" }

[package]
name = "startmc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.52"
nu-ansi-term = "0.50.1"
tokio.workspace = true
reqwest.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
startmc_mojapi.workspace = true
serde.workspace = true
toml = "0.8.23"
dirs = "6.0.0"
indicatif = "0.17.11"
dialoguer = "0.11.0"
startmc_downloader.workspace = true
serde_json = "1.0.140"
ferinth = "2.12.0"
