[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# crates/
startmc_downloader = { path = "crates/downloader" }
startmc_mojapi = { path = "crates/mojapi" }

[package]
name = "startmc"
version = "0.1.0"
edition = "2024"
homepage = "https://codeberg.org/noth/startmc"
repository = "https://codeberg.org/noth/startmc"
license = "MIT"
description = "CLI for running Minecraft clients"
keywords = ["minecraft", "client", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "startmc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.52"
nu-ansi-term = "0.50.1"
tokio.workspace = true
reqwest.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
startmc_mojapi.workspace = true
serde.workspace = true
toml = { version = "0.8.23", features = ["display"] }
dirs = "6.0.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-select"] }
startmc_downloader.workspace = true
serde_json = "1.0.140"
ferinth = "2.12.0"
color-eyre = { version = "0.6.5", default-features = false, features = [
    "track-caller",
] }
sha1_smol = { version = "1.0.1", features = ["std"] }
rayon = "1.10.0"
version-compare = "0.2.0"
chrono = "0.4.41"
chrono-humanize = "0.2.3"
re_format = "0.23.3"
openssl = { version = "0.10.73", features = ["vendored"] }
pin-project-lite = "0.2.16"
