[package]
name = "startmc_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
form_urlencoded = "1.1"
futures = "0.3"
indicatif = "0.17"
reqwest.workspace = true
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
task-local-extensions = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
